package com.udacity.project4

import android.app.Application
import android.view.View
import androidx.annotation.StringRes
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.core.app.launchActivity
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.ToastMatcher
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import kotlinx.coroutines.runBlocking
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get


@RunWith(AndroidJUnit4::class)
@LargeTest
class RemindersActivityTest : AutoCloseKoinTest() {
    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application
    private val dataBindingIdlingResource = DataBindingIdlingResource()
    private val decorView: View? = null
    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */

    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                        appContext,
                        get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                        appContext,
                        get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @After
    fun stop() {
        stopKoin()
    }

    @Test
    fun check_add_reminder() {

        val activityScenario = launchActivity<RemindersActivity>()
        dataBindingIdlingResource.monitorActivity(activityScenario)

        onView(withId(R.id.addReminderFAB)).perform(click())
        onView(withId(R.id.reminderTitle))
                .perform(typeText("t1"), closeSoftKeyboard())
        onView(withText("t1")).check(matches(isDisplayed()))

        onView(withId(R.id.reminderDescription))
                .perform(typeText("d1"), closeSoftKeyboard())
        onView(withText("d1")).check(matches(isDisplayed()))

        onView(withId(R.id.selectLocation)).perform(click())

        onView(withId(R.id.map)).perform(longClick())
//        val device = UiDevice.getInstance(getInstrumentation())
//        device.click(52.50648406893113.toInt(), 13.443535038592412.toInt())


        Thread.sleep(2000);

        onView(withId(R.id.save_location)).perform(click())

        Thread.sleep(2000);


        onView(withId(R.id.saveReminder)).perform(click())
        onView(withText("t1")).check(matches(isDisplayed()))
        onView(withText("d1")).check(matches(isDisplayed()))
        onView(withText(R.string.dropped_pin)).check(matches(isDisplayed()))
        //Modify toast_msg to your own string resource
        onView(withText(R.string.reminder_saved))
            .inRoot(ToastMatcher().apply {
                matches(isDisplayed())
            });
//        onView(withText(R.string.err_enter_title))
//            .check(matches(isDisplayed()));
//        onView(withText(R.string.err_select_location))
//            .check(matches(isDisplayed()));
        activityScenario.close()
    }

    @Test
    fun check_add_reminder_titleNull() {

        val activityScenario = launchActivity<RemindersActivity>()
        dataBindingIdlingResource.monitorActivity(activityScenario)

        onView(withId(R.id.addReminderFAB)).perform(click())
        onView(withId(R.id.reminderTitle))
            .perform(typeText(""), closeSoftKeyboard())

        onView(withId(R.id.reminderDescription))
            .perform(typeText(""), closeSoftKeyboard())

        onView(withId(R.id.selectLocation)).perform(click())

        onView(withId(R.id.map)).perform(longClick())


        Thread.sleep(2000);

        onView(withId(R.id.save_location)).perform(click())

        Thread.sleep(2000);


        onView(withId(R.id.saveReminder)).perform(click())
        onView(withText(R.string.dropped_pin)).check(matches(isDisplayed()))
        //Modify toast_msg to your own string resource
        checkSnackBarDisplayedByMessage(R.string.err_enter_title)
        activityScenario.close()
    }

    @Test
    fun check_add_reminder_locationNull() {

        val activityScenario = launchActivity<RemindersActivity>()
        dataBindingIdlingResource.monitorActivity(activityScenario)

        onView(withId(R.id.addReminderFAB)).perform(click())
        onView(withId(R.id.reminderTitle))
            .perform(typeText("t1"), closeSoftKeyboard())
        onView(withText("t1")).check(matches(isDisplayed()))


        onView(withId(R.id.reminderDescription))
            .perform(typeText("d1"), closeSoftKeyboard())
        onView(withText("d1")).check(matches(isDisplayed()))

        Thread.sleep(2000);
        onView(withText("t1")).check(matches(isDisplayed()))
        onView(withText("d1")).check(matches(isDisplayed()))
        onView(withId(R.id.saveReminder)).perform(click())
        //Modify toast_msg to your own string resource
        checkSnackBarDisplayedByMessage(R.string.err_select_location)
        activityScenario.close()
    }

    private fun checkSnackBarDisplayedByMessage(@StringRes message: Int) {
        onView(withText(message))
            .check(matches(withEffectiveVisibility(Visibility.VISIBLE)))
    }
}
